<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Bookmarks">

    <TextView
        android:id="@+id/bookmarks_textview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/mulish_black"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/bookmarks"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/app_red"
        android:progressTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmarks_textview">

    </ProgressBar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bookmarks_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookmarks_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/havent_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish"
        android:text="@string/havent_saved"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarks_textview"></TextView>

    <Button
        android:id="@+id/bookmarks_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/transparent_white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/mulish_black"
        android:text="@string/explore"
        android:textColor="@color/app_red"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/havent_saved"
        app:layout_constraintStart_toStartOf="@+id/havent_saved"
        app:layout_constraintTop_toBottomOf="@id/havent_saved" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/bottomNavigationBackground"
        app:itemActiveIndicatorStyle="@color/transparent_white"
        app:itemBackground="@drawable/menu_selector"
        app:itemRippleColor="@color/transparent_white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>