<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:fontFamily="@font/mulish_black"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_icon"
        tools:text="Name Surname">
    </TextView>

    <ImageButton
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageButton>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/app_red"
        android:progressTintMode="src_atop"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_icon" />

    <com.projects.pexels_app.utils.ZoomableImageView
        android:id="@+id/zoomable_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar">
    </com.projects.pexels_app.utils.ZoomableImageView>

    <ImageButton
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:src="@drawable/download_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </ImageButton>

    <TextView
        android:id="@+id/download_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        app:layout_constraintBottom_toBottomOf="@+id/download"
        app:layout_constraintEnd_toEndOf="@+id/download"
        android:gravity="center"
        android:fontFamily="@font/mulish"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/download"
        app:layout_constraintTop_toTopOf="@+id/download">
    </TextView>

    <ImageButton
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/download">
    </ImageButton>

    <TextView
        android:id="@+id/error_image_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish"
        android:textColor="@color/chip_text_color_not_activated"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/image_not_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <Button
        android:id="@+id/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/transparent_white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/mulish_black"
        android:text="@string/explore"
        android:textColor="@color/app_red"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_image_not_found" />

</androidx.constraintlayout.widget.ConstraintLayout>